--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,48 +1,85 @@
 *{
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    box-shadow: 3px 3px 5px black;
+    background-color: rgb(3, 89, 160);
+    color: aliceblue;
 }
-header{
-    background-color: rgb(12, 11, 11);
-    padding: 20px;
-    text-align: center;
-    font-size: 35px;
-    color: blanchedalmond;
+img{
+    width: 70px;
+    background-color: white;
 }
-section{
+header, .navegador-header{
     display: flex;
+    flex-direction: row;
+    align-items: center;
 }
-nav{
-    flex: auto;
-    background-image: url("/img/pexels-pixabay-262508.jpg");
+.header{
+    background-color: rgb(0, 60, 255);
+    box-shadow: 1px 1px 4px darkblue;
+    height: 3.5em;
+    justify-content: space-between;
+    padding: 0 10%;
 }
-.listas{
-    list-style-type: none;
-    padding: 5px;
-}
-button{
-    display: inline-block;
-    padding: 15px 25px;
-    font-size: 24px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    cursor: pointer;
-    text-align: center;
+.navegador-header a{
     text-decoration: none;
-    outline: none;
-    color: rgb(31, 30, 30);
-    background-color: rgb(184, 190, 184);
+    color: aliceblue;
+    transition: 1s;
+    font-weight: bold;
+}
+.link-header{
+    background-color: rgba(0, 255, 255, 0.384);
+    padding: 10px;
+    border-radius: 10px;
+}
+.navegador-header{
+    gap: 1em;
+}
+.conteudo h1{
+    text-align: center;
+    padding: 1.5em;
+    transition: 1s;
+
+}
+.conteudo-botao {
+    background-color: rgba(0, 255, 255, 0.384);
+    width: 180px;
+    height: 60px;
     border: none;
-    border-radius: 15px;
-    margin: 5px;
+    box-shadow: 1px 1px 4px darkblue;
+    border-radius: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 24px;
 }
-button:hover {
-    background-color: rgba(0, 0, 0, 0.541);
-    color: antiquewhite;
+.conteudo-botao a{
+    text-decoration: none;
+    color: white;
 }
-button:active {
-    background-color: blanchedalmond;
-    transform: translate(4px);
+main{
+    padding: 5em;
+}
+footer, .navegador-final{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+.final{
+    background-color: rgb(0, 60, 255);
+    box-shadow: 1px 1px 4px darkblue;
+    height: 3.5em;
+    justify-content: space-between;
+    padding: 0 10%;
+
+}
+.navegador-final a{
+    text-decoration: none;
+    color: aliceblue;
+    transition: 1s;
+    font-weight: bold;
+}
+.navegador-final{
+    gap: 1em;
 }
