--- a/css/page2.css
+++ b/css/page2.css
@@ -1,26 +1,26 @@
 *{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-
+    margin: 0;
+    padding: 0;
 }
 body{
-    background-image:linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),url("/img/pexels-pixabay-262508.jpg");
-    height: 400px;
-    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(3, 89, 160);
+    color: aliceblue;
 }
 header{
-    background-color: rgb(12, 11, 11);
-    padding: 20px;
-    text-align: center;
-    font-size: 35px;
-    color: blanchedalmond;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: rgb(0, 60, 255);
+    box-shadow: 1px 1px 4px darkblue;
+    height: 3.5em;
+    padding: 0 10%;
 }
 .lista-ul{
     margin: 10px;
     padding-right: 20px;
     padding-top: 15px;
+    font-weight: bold;
 }
 a{
     padding: 15px;
