--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,9 +61,11 @@ main{
     padding: 5em;
 }
 footer, .navegador-final{
+    position: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
+    
 
 }
 .final{
