--- a/css/login.css
+++ b/css/login.css
@@ -30,3 +30,12 @@ button{
 button:hover{
     background-color: mediumaquamarine;
 }
+span a{
+    color: aliceblue;
+    text-decoration: none;
+    width: 80%;
+    margin-left: 8%;
+    margin-right: 9%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
